// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetSLO resets all associated resources 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 5`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "index": ".slo-observability.sli-v3*",
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "term": Object {
                  "slo.id": "irrelevant",
                },
              },
            ],
          },
        },
        "refresh": true,
      },
    ],
    Array [
      Object {
        "index": ".slo-observability.summary-v3*",
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "term": Object {
                  "slo.id": "irrelevant",
                },
              },
            ],
          },
        },
        "refresh": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 6`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "budgetingMethod": "occurrences",
        "createdAt": 2023-01-01T00:00:00.000Z,
        "description": "irrelevant",
        "enabled": true,
        "groupBy": "*",
        "id": "irrelevant",
        "indicator": Object {
          "params": Object {
            "environment": "irrelevant",
            "index": "metrics-apm*",
            "service": "irrelevant",
            "threshold": 500,
            "transactionName": "irrelevant",
            "transactionType": "irrelevant",
          },
          "type": "sli.apm.transactionDuration",
        },
        "name": "irrelevant",
        "objective": Object {
          "target": 0.999,
        },
        "revision": 1,
        "settings": Object {
          "frequency": Duration {
            "unit": "m",
            "value": 1,
          },
          "syncDelay": Duration {
            "unit": "m",
            "value": 1,
          },
        },
        "tags": Array [
          "critical",
          "k8s",
        ],
        "timeWindow": Object {
          "duration": Duration {
            "unit": "d",
            "value": 7,
          },
          "type": "rolling",
        },
        "updatedAt": 2023-01-01T00:00:00.000Z,
        "version": 1,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 7`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 8`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "_meta": Object {
          "description": "Ingest pipeline for SLO summary data [id: irrelevant, revision: 1]",
          "managed": true,
          "managed_by": "observability",
          "version": 3.1,
        },
        "description": "Ingest pipeline for SLO summary data [id: irrelevant, revision: 1]",
        "id": ".slo-observability.summary.pipeline-irrelevant-1",
        "processors": Array [
          Object {
            "set": Object {
              "description": "Set errorBudgetEstimated field",
              "field": "errorBudgetEstimated",
              "value": false,
            },
          },
          Object {
            "set": Object {
              "description": "Set isTempDoc field",
              "field": "isTempDoc",
              "value": false,
            },
          },
          Object {
            "set": Object {
              "description": "Set groupBy field",
              "field": "slo.groupBy",
              "value": "*",
            },
          },
          Object {
            "set": Object {
              "description": "Set name field",
              "field": "slo.name",
              "value": "irrelevant",
            },
          },
          Object {
            "set": Object {
              "description": "Set description field",
              "field": "slo.description",
              "value": "irrelevant",
            },
          },
          Object {
            "set": Object {
              "description": "Set tags field",
              "field": "slo.tags",
              "value": Array [
                "critical",
                "k8s",
              ],
            },
          },
          Object {
            "set": Object {
              "description": "Set indicator.type field",
              "field": "slo.indicator.type",
              "value": "sli.apm.transactionDuration",
            },
          },
          Object {
            "set": Object {
              "description": "Set budgetingMethod field",
              "field": "slo.budgetingMethod",
              "value": "occurrences",
            },
          },
          Object {
            "set": Object {
              "description": "Set timeWindow.duration field",
              "field": "slo.timeWindow.duration",
              "value": "7d",
            },
          },
          Object {
            "set": Object {
              "description": "Set timeWindow.type field",
              "field": "slo.timeWindow.type",
              "value": "rolling",
            },
          },
          Object {
            "set": Object {
              "description": "Set objective.target field",
              "field": "slo.objective.target",
              "value": 0.999,
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 0', set status to NO_DATA",
              "field": "status",
              "if": "ctx.statusCode == 0",
              "value": "NO_DATA",
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 1', set statusLabel to VIOLATED",
              "field": "status",
              "if": "ctx.statusCode == 1",
              "value": "VIOLATED",
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 2', set status to DEGRADING",
              "field": "status",
              "if": "ctx.statusCode == 2",
              "value": "DEGRADING",
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 4', set status to HEALTHY",
              "field": "status",
              "if": "ctx.statusCode == 4",
              "value": "HEALTHY",
            },
          },
          Object {
            "set": Object {
              "field": "summaryUpdatedAt",
              "value": "{{{_ingest.timestamp}}}",
            },
          },
          Object {
            "set": Object {
              "field": "spaceId",
              "value": "some-space",
            },
          },
          Object {
            "set": Object {
              "description": "Store the indicator params",
              "field": "slo.indicator.params",
              "ignore_failure": true,
              "value": Object {
                "environment": "irrelevant",
                "index": "metrics-apm*",
                "service": "irrelevant",
                "threshold": 500,
                "transactionName": "irrelevant",
                "transactionType": "irrelevant",
              },
            },
          },
          Object {
            "set": Object {
              "field": "slo.createdAt",
              "value": 2023-01-01T00:00:00.000Z,
            },
          },
          Object {
            "set": Object {
              "field": "slo.updatedAt",
              "value": 2023-01-01T00:00:00.000Z,
            },
          },
          Object {
            "set": Object {
              "field": "kibanaUrl",
              "ignore_failure": true,
              "value": "http://myhost.com/mock-server-basepath",
            },
          },
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 9`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "budgetingMethod": "occurrences",
        "createdAt": 2023-01-01T00:00:00.000Z,
        "description": "irrelevant",
        "enabled": true,
        "groupBy": "*",
        "id": "irrelevant",
        "indicator": Object {
          "params": Object {
            "environment": "irrelevant",
            "index": "metrics-apm*",
            "service": "irrelevant",
            "threshold": 500,
            "transactionName": "irrelevant",
            "transactionType": "irrelevant",
          },
          "type": "sli.apm.transactionDuration",
        },
        "name": "irrelevant",
        "objective": Object {
          "target": 0.999,
        },
        "revision": 1,
        "settings": Object {
          "frequency": Duration {
            "unit": "m",
            "value": 1,
          },
          "syncDelay": Duration {
            "unit": "m",
            "value": 1,
          },
        },
        "tags": Array [
          "critical",
          "k8s",
        ],
        "timeWindow": Object {
          "duration": Duration {
            "unit": "d",
            "value": 7,
          },
          "type": "rolling",
        },
        "updatedAt": 2023-01-01T00:00:00.000Z,
        "version": 1,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 10`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 11`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "document": Object {
          "errorBudgetConsumed": 0,
          "errorBudgetEstimated": false,
          "errorBudgetInitial": 0.0010000000000000009,
          "errorBudgetRemaining": 1,
          "goodEvents": 0,
          "isTempDoc": true,
          "kibanaUrl": "http://myhost.com/mock-server-basepath",
          "service": Object {
            "environment": "irrelevant",
            "name": "irrelevant",
          },
          "sliValue": -1,
          "slo": Object {
            "budgetingMethod": "occurrences",
            "createdAt": "2023-01-01T00:00:00.000Z",
            "description": "irrelevant",
            "groupBy": "*",
            "groupings": Object {},
            "id": "irrelevant",
            "indicator": Object {
              "params": Object {
                "environment": "irrelevant",
                "index": "metrics-apm*",
                "service": "irrelevant",
                "threshold": 500,
                "transactionName": "irrelevant",
                "transactionType": "irrelevant",
              },
              "type": "sli.apm.transactionDuration",
            },
            "instanceId": "*",
            "name": "irrelevant",
            "objective": Object {
              "target": 0.999,
              "timesliceTarget": undefined,
              "timesliceWindow": undefined,
            },
            "revision": 1,
            "tags": Array [
              "critical",
              "k8s",
            ],
            "timeWindow": Object {
              "duration": "7d",
              "type": "rolling",
            },
            "updatedAt": "2023-01-01T00:00:00.000Z",
          },
          "spaceId": "some-space",
          "status": "NO_DATA",
          "statusCode": 0,
          "totalEvents": 0,
          "transaction": Object {
            "name": "irrelevant",
            "type": "irrelevant",
          },
        },
        "id": "slo-irrelevant",
        "index": ".slo-observability.summary-v3.1.temp",
        "refresh": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
